# trabalho-CD-3B

./: teste.py
projeto/: pyproject.toml
projeto/projeto/: main.py  teste.py
