[tool.poetry]
name = "projeto"
version = "0.1.0"
description = ""
authors = ["Vinicius <niciugcruz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.50.0"
pandas = "^2.0.0"
plotly = "^5.15.0"
seaborn = "^0.12.0"
matplotlib = "^3.7.0"
numpy = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
